--- a/Sesión 21(25-11-2019)/Ejercicio2.html
+++ b/Sesión 21(25-11-2019)/Ejercicio2.html
@@ -29,6 +29,11 @@
             Derecha
         </aside>
     </div>
+
+    <h2>Pruebas con operadores</h2>
+    <h3>Prueba multiplicar * número entero</h3>
+    <h4>Prueba suma px + px</h4>
+    <h5>prueba suma px + número entero</h5>
 </body>
 
 </html>
