--- a/Sesión 22(28-11-2019)/SubirServidor/Ejercicio1.html
+++ b/Sesión 22(28-11-2019)/SubirServidor/Ejercicio1.html
@@ -28,8 +28,7 @@
     </div>
     <div class="cajaborderradius3">
         Esta capa tiene un borderradius personalizado 
-        con un grosor pasado por parámetro.
-        <p class="cajaborderradius3__texto">
+        con un grosor pasado por parámetro.        <p class="cajaborderradius3__texto">
                 Párrafo dependiente de la capa border radius
         </p>
     </div>
